# zoidsquest

./: AUTHORS  Makefile  Makefile.am  Makefile.in  Makefile.in.bak  Makefile.win  Makefile2.win  NEWS  README  TODO  TODO~  acinclude.m4  bak.configure.in  config.h  config.h.in  config.status  configure  configure.in  zoidsquest
autom4te.cache/: output.0  output.1  output.2  output.4  traces.0  traces.1  traces.2  traces.3  traces.4
data/levels/: level.xml  level.xml~  level2.xml  level3.xml  level3.xml~  level4.xml  level4.xml~  level5.xml  level5mod.xml  level6.xml  test.xml
src/: Makefile  Makefile.am  Makefile.in  SDLdraw.cpp  SDLdraw.cpp~  SDLdraw.h  SDLdraw.h~  editmain.cpp  game.cpp  game.cpp~  game.h  game.xml  game.xml~  hud.cpp  hud.h  input.cpp  input.cpp~  input.h  input.h~  io.cpp  io.h  level.cpp~  level.h  leveleditor.cpp~  leveleditor.h  lisenceheader.txt  main.cpp  main.h  menu.cpp  menu.cpp~  menu.h  menu.xml  objects.cpp  objects.h  objects.h~  parser.cpp  parser.h  sound.cpp  sound.cpp~  sound.h  (+10 more)
src/.deps/: SDLdraw.Po  game.Po  hud.Po  input.Po  io.Po  level.Po  leveleditor.Po  main.Po  menu.Po  objects.Po  parser.Po  sound.Po  spells.Po  sprites.Po  text.Po  werror.Po
