#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(Zoids-Quest, 0.0.1)
AC_CONFIG_HEADER([config.h])
AC_CONFIG_SRCDIR([src/main.cpp])
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE

SDL_VERSION=1.2.4
XML_VERSION=2.0.0

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AM_PATH_SDL($SDL_VERSION, :, AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]))
CXXFLAGS="$CXXFLAGS $SDL_CFLAGS"
CFLAGS="$CFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

AM_PATH_XML2($XML_VERSION, :, AC_MSG_ERROR([*** libxml2 version $XML_VERSION not found!]))
CXXFLAGS="$CXXFLAGS $XML_CPPFLAGS"
CFLAGS="$CFLAGS $XML_CPPFLAGS"
LIBS="$LIBS $XML_LIBS"

#Cool - AC_HAVE_LIBRARY automagically updates LIBS :)

# FIXME: Replace `main' with a function in `-lSDL_gfx':
AC_HAVE_LIBRARY([SDL_gfx])
# FIXME: Replace `main' with a function in `-lSDL_image':
AC_HAVE_LIBRARY([SDL_image])
# FIXME: Replace `main' with a function in `-lSDL_mixer':
AC_HAVE_LIBRARY([SDL_mixer])



# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h strings.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
