bin_PROGRAMS = zoidsquest

zoidsquest_SOURCES = \
game.cpp \
game.h \
hud.cpp \
hud.h \
input.cpp \
input.h \
io.cpp \
io.h \
level.cpp \
leveleditor.cpp \
leveleditor.h \
level.h \
main.cpp \
main.h \
menu.cpp \
menu.h \
objects.cpp \
objects.h \
parser.cpp \
parser.h \
SDLdraw.cpp \
SDLdraw.h \
sound.cpp \
sound.h \
spells.cpp \
sprites.cpp \
sprites.h \
text.cpp \
text.h \
werror.cpp \
werror.h

